<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="my_apps_title">My Nanodegree Apps!</string>
    <string name="p1">SPOTIFY STREAMER</string>
    <string name="p2">SCORES APP</string>
    <string name="p3">LIBRARY APP</string>
    <string name="p4">BUILD IT BIGGER</string>
    <string name="p5">XYZ READER</string>
    <string name="p6">CAPSTONE: MY OWN APP</string>
    <string name="action_settings">Settings</string>
</resources>
