<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    >

    <TextView android:id="@+id/title" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/my_apps_title" android:textSize="25dp"/>

    <Button
        android:id="@+id/buttonp1"
        android:layout_width="200dp" android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:backgroundTint="#faa23d"
        android:text="@string/p1"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/buttonp2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_alignEnd="@+id/buttonp1"
        android:layout_alignStart="@+id/buttonp1"
        android:layout_below="@+id/buttonp1"
        android:backgroundTint="#faa23d"
        android:text="@string/p2"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/buttonp3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/buttonp2"
        android:layout_alignStart="@+id/buttonp2"
        android:layout_below="@+id/buttonp2" android:backgroundTint="#faa23d"
        android:text="@string/p3"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/buttonp4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/buttonp3"
        android:layout_alignStart="@+id/buttonp3"
        android:layout_below="@+id/buttonp3"
        android:backgroundTint="#faa23d"
        android:text="@string/p4"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/buttonp5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/buttonp4"
        android:layout_alignStart="@+id/buttonp4"
        android:layout_below="@+id/buttonp4"
        android:backgroundTint="#faa23d"
        android:text="@string/p5"
        android:textColor="#ffffff" />

    <Button

        android:id="@+id/buttonp6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/buttonp5"
        android:layout_alignStart="@+id/buttonp5"
        android:layout_below="@+id/buttonp5"
        android:backgroundTint="#e60050"
        android:text="@string/p6"
        android:textColor="#ffffff" />

</RelativeLayout>
